                                                         -*- coding: utf-8 -*-
  Changes with Apache Traffic Server 3.3.3


  *) [TS-1844] efficient HostDB file allocation

  *) [TS-1586] Fix the SPDY plugin build under clang on Linux.

  *) [TS-1053] Make combo_handler compiler. Author: Conan Wang.

  *) [TS-1792] Cleanup extremely verbvose debug text on Vary headers.

  *) [TS-1819] Guarantee hwloc initialization.

  *) [TS-1830] Add getpagesize library function.

  *) [TS-1801] Remove proxy.config.net.throttle_enabled, it's an artifact
   of a debugging case, and should not have been included upstream.

  *) [TS-1829] Values exceed capacity of 'long' data type on 32-bit

  *) [TS-1755] Add basic logstats tests.

  *) TS-1184 Additional whitespace in proxy.config.admin.user_id value results
   in error.

  *) [TS-1662] Remove remaining use of register storage class.

  *) [TS-846] Eliminate proxy.config.remap.use_remap_processor.

  *) [TS-1802] Remove proxy.config.net.accept_throttle.

  *) [TS-1752] Change type of "len" in jtest to off_t, for better
  compiler compliance.

  *) [TS-1826] Remove DumpStats/http_dump dead code.


  Changes with Apache Traffic Server 3.3.2


  *) [TS-621] Allow caching of empty docs (currently only if a header
   Content-Length: 0 is in the response). New config option is named
   proxy.config.http.cache.allow_empty_doc, and is disabled by default.

  *) [TS-1778] Remove vestigal extensions.config support.

  *) [TS-1806] bogus buffer sizing in CfgContextUtils.cc.

  *) [TS-1805] Fix stats ExpressionEval in stats xml.
   Author: Yunkai Zhang

  *) [TS-1783] Eliminate the wpad.dat configuration option (it's unused).

  *) [TS-1787] Eliminate old ink_time code (was probably only used by the
   now obsolete Web UI). This fixes compiling with gcc 4.8 as well.

  *) [TS-1067] Remove unused config (and code) for bandwidth management.

  *) [TS-1736] Fatal() terminates process without a backtrace.