@@ -2,6 +2,8 @@
   Changes with Apache Traffic Server 3.3.3
 
 
+  *) [TS-1846] remove TestHook
+
   *) [TS-1844] efficient HostDB file allocation
 
   *) [TS-1586] Fix the SPDY plugin build under clang on Linux.
